# AI-Automation

./: README.md  Structure.md  fix.txt  temp.txt
backend/: .gitignore  README.md  pyproject.toml
backend/app/: config.py  database.py  main.py  models.py
backend/app/models/: __init__.py  lead_model.py
backend/app/routes/: health_routes.py  lead_routes.py  webhook_routes.py
backend/app/schemas/: lead_schema.py  response_schema.py
backend/app/services/: ai_service.py  drive_service.py  email_service.py  pdf_service.py  scraper_service.py  sheet_service.py
backend/app/templates/: report_template.html
backend/app/utils/: helpers.py  prompts.py  validators.py
frontend/: .gitignore  README.md  package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: Footer.jsx  LeadForm.jsx  Loader.jsx  Navbar.jsx  Success.jsx
frontend/src/pages/: Home.jsx  Landing.jsx
frontend/src/services/: api.js
