[project]
name = "ai-lead-automation"
version = "0.1.0"
description = "AI Lead Automation Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "groq>=1.2.0",
    "gspread>=6.2.1",
    "jinja2>=3.1.6",
    "oauth2client>=4.1.3",
    "pydrive2>=1.21.3",
    "python-dotenv>=1.2.2",
    "reportlab>=4.5.1",
    "requests>=2.34.2",
    "resend>=2.30.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["app"]